--- a/Loan/pom.xml
+++ b/Loan/pom.xml
@@ -2,9 +2,8 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Loan</groupId>
+  <groupId>Personal Loan</groupId>
   <artifactId>personalloan</artifactId>
-  <name>Kotak Personal Loan</name>
   <version>0.0.1</version>
   <repositories>
     <repository>
